# sdl-game-dev

./: .gitignore  README.md
game-with-cmake/: CMakeLists.txt
p1-sdl-create-app/: CMakeLists.txt
p1-sdl-create-app/src/: main.cpp
sdl-mingw/: CMakeLists.txt
sdl-mingw/src/: main.cpp
sdl2-makefile-win32/: CMakeLists.txt
sdl2-makefile-win32/src/: main.cpp
sdl2-source-cmake/: .gitmodules  CMakeLists.txt
sdl2-source-cmake/src/: main.cpp
sdl2-with-c-language/: CMakeLists.txt
sdl2-with-c-language/src/: main.c
sdl2-with-cmake/: CMakeLists.txt
sdl3-with-cmake/: .gitmodules  CMakeLists.txt
sdl3-with-cmake/src/: main.cpp
